--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="style.css"
     <title>colo de Deus</title>
-    <link rel="stylesheet" href="style.css"
+ 
+<div  class="cabeçalho" id="cabeçalho">
+    <img class="cabeçalho imagem" src="bibliophile-anico 1.png" alt="imagem de cabeçalho"
+    <h1 clas="cabeçalho-titulo">book time"></h1>
+    <ul class="=cabeçalho-linta">
+
+</div>
+   
+<img class="cabeçalho imagem" src="bibliophile-anico 1.png"
 </head>
 <body>
     
